Fix header on mobile and such

--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,19 @@ h1 {
     text-align: center;
 }
 
-.main-links {
-    position: absolute;
-    top: 10px;
-    right: 0;
+.display-flex-row {
+    display: flex;
+    flex-direction: row;
+}
+
+.flex-auto-in-row {
+    flex: auto;
+    min-width: 0;
+}
+
+.index-image {
+    width: 65%;
+    height: auto;
 }
 
 .little-padding-right {
